--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -78,10 +78,14 @@ jobs:
       - name: Generate Pie Chart
         run: node config/generate-pie-chart.js
 
-      # Publish Pie Chart
-      - name: Upload Pie Chart
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results-chart
-          path: cypress/generated/test-results-chart.png
+      # Commit and push the pie chart to the repository
+      - name: Commit and Push Pie Chart
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add cypress/generated/test-results-chart.png
+          git commit -m "Add test results pie chart"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
